# Github_Action-Rust-Build_and_Release

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-run.ps1  tutorial.md
.github/workflows/: counter.yaml  get-changelog-content.js  run.yaml  run.yml  test-ffmpeg-env.yaml  test-macos.yaml  test-winows.yaml  test-yml.yaml  test-yml.yml  test_get_msg.yaml  update-latest-release-notes.js
.github/workflows/example/: javascript.js
gen-video/: Cargo.toml
gen-video/src/: lib.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs  test_lib_load.rs  test_lib_video.rs  test_video.rs
library-test/: Cargo.toml
src/: Cargo.toml  main.rs
src/src/: main.rs
