# [workspace]
# members = ["hello-world", "library-test"]

# resolver = "2"

[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "*"

ffmpeg-next = { version = "*", features = [
  "format",
  "codec",
  "software-resampling",
  "software-scaling",
] }
ndarray = "*"
video-rs = { version = "*", features = ["ndarray"] }

[[bin]]
name = "hello-world"
path = "hello-world/src/main.rs"
