# [workspace]
# members = ["hello-world", "library-test"]

# resolver = "2"

[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "*"

video-rs = { version = "*", features = ["ndarray"] }
ndarray = { version = "*", optional = true }

[[bin]]
name = "hello-world"
path = "hello-world/src/main.rs"
